# rye-monorepo

./: .gitignore  README.md  pyproject.toml
app1/: README.md  app1.dockerfile  docker-compose.yml  pyproject.toml
app1/src/app1/: app.py
lib/: README.md  pyproject.toml
lib/src/lib/: __init__.py
lib/src/lib/application/: generate_recipe_then_save.py
lib/src/lib/domain/recipe/: recipe.py
lib/src/lib/infrastruture/openai_client/: __init__.py
